<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="4dip" >
			
		<TableLayout
			android:layout_width="fill_parent"
		    android:layout_height="fill_parent" >
		
			<TableRow
				android:id="@+id/tableRow1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >
			
			    <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/mail_text"
		            android:layout_gravity="center_vertical"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textSize="25dp" />
			    
				<Button
					android:id="@+id/btn_send"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="15dp"
					android:text="@string/mail_send" />
		
		        <Button
		            android:id="@+id/btn_attach"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            
		            android:textSize="15dp"
		            android:text="@string/mail_attach" />
		    </TableRow>
			
		    <TableRow
		        android:id="@+id/tableRow2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/mail_sender"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	
		        <EditText
		            android:id="@+id/edt_sender"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:layout_span="2"
		            android:ems="10"
		            android:hint="@string/mail_sender"
		            android:inputType="textEmailAddress" />
		    </TableRow>
			
		    <TableRow
		        android:id="@+id/tableRow3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		
		        <TextView
		            android:id="@+id/textView3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/mail_receiver"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	
		        <EditText
		            android:id="@+id/edt_receiver"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:layout_span="2"
		            android:ems="10"
		            android:hint="@string/mail_receiver"
		            android:inputType="textEmailAddress" />
		    </TableRow>

		    <TableRow
		        android:id="@+id/tableRow4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >

		        <TextView
		            android:id="@+id/textView4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/mail_title"
		            android:textAppearance="?android:attr/textAppearanceMedium" />

		        <EditText
		            android:id="@+id/edt_title"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_span="2"
		            android:layout_weight="1"
		            android:ems="10"
		            android:hint="@string/mail_title"
		            android:inputType="text" >

		            <requestFocus />
		        </EditText>
		    </TableRow>

		</TableLayout>
		
		<EditText
		    android:id="@+id/edt_content"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:ems="10"
		    android:hint="@string/mail_content"
		    android:minLines="5"
		    android:gravity="top"
		    android:inputType="textMultiLine" />
	</LinearLayout>
</ScrollView>